<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.barcode4j</groupId>
	<artifactId>barcode4j</artifactId>
	<packaging>jar</packaging>
	<name>Barcode4J</name>
	<version>2.1-nexus1</version>
	<description>Barcode4J is a flexible generator for barcodes written in Java.</description>
	<url>http://barcode4j.sourceforge.net</url>
	<distributionManagement>
		<repository>
			<id>NexusMaven</id>
			<url>https://pkgs.dev.azure.com/bdodev/Nexus/_packaging/NexusMaven/maven/v1</url>
		</repository>
	</distributionManagement>
	<properties>
		<jdk.version>8</jdk.version>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>

		<maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US</maven-surefire-plugin.argLine>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>http://barcode4j.cvs.sourceforge.net/barcode4j</url>
		<connection>scm:cvs:pserver:anonymous@barcode4j.cvs.sourceforge.net:/cvsroot/barcode4j:barcode4j</connection>
	</scm>
	<developers>
		<developer>
			<id>jmaerki</id>
			<name>Jeremias Märki</name>
			<email>jmaerki@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>the_webmaestro</id>
			<name>Web Maestro Clay Leeds</name>
			<email>the_webmaestro@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>nicolaken</id>
			<name>Nicola Ken Barozzi</name>
			<email>nicolaken@krysalis.org</email>
		</developer>
		<developer>
			<id>buerkle</id>
			<name>Dietmar Bürkle</name>
			<email>buerkle@users.sourceforge.net</email>
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<argLine>-Duser.language=en -Duser.region=US</argLine>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<release>${jdk.version}</release>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.apache.avalon.framework</groupId>
			<artifactId>avalon-framework-impl</artifactId>
			<version>4.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.0</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.10.12</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
